After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732507 - gl: R/RG textures don't work on iOS
gl: R/RG textures don't work on iOS
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal major
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-30 17:17 UTC by Sebastian Dröge (slomo)
Modified: 2015-04-11 17:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2014-06-30 17:17:26 UTC
+++ This bug was initially created as a clone of Bug #732390 +++

Currently only zeroes (i.e. green or black) is rendered when using them, while the fallback code path just works fine. Needs to be investigated.
Comment 1 Matthew Waters (ystreet00) 2015-03-14 10:46:19 UTC
This may be due to the slight differences between the GL_EXT_texture_rg and GL_ARB_texture_rg with respect to valid internal format parameters.
Comment 2 Matthew Waters (ystreet00) 2015-03-14 19:00:33 UTC
May be half fixed by:

commit 48f8b5b46bae70477a59f615bdb075f02b7b90ac
Author: Matthew Waters <matthew@centricular.com>
Date:   Sat Mar 14 18:45:01 2015 +0000

    glmemory: fix the slight difference between EXT_rg and ARB_rg
    
    GL_EXT_texture_rg doesn't take sized formats for the internalformat
    parameter of TexImage* but GL_ARB_texture_rg and GL(ES)3 do.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=732507
Comment 3 Sebastian Dröge (slomo) 2015-03-14 19:18:36 UTC
Where half means that the disabling of R/RG textures must be undone?
Comment 4 Matthew Waters (ystreet00) 2015-03-14 19:39:37 UTC
correct.
Comment 5 Sebastian Dröge (slomo) 2015-04-11 17:18:01 UTC
commit a557a546ac2f101d7f5d4981f83eb85e5c285164
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Sat Apr 11 19:17:00 2015 +0200

    gl: Remove iOS/EAGL workaround for R/RG textures
    
    This should be unneeded now after https://bugzilla.gnome.org/show_bug.cgi?id=732507

commit b10cdc853676fa64ce2a1c3ffbf8137a043d0413
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Sat Apr 11 19:14:34 2015 +0200

    glcolorconvert: Add correct check for RG/R textures in glcolorconvert too
    
    https://bugzilla.gnome.org/show_bug.cgi?id=732507